syntax = "proto3";

package com.tservice.proto.usercontext;

option java_multiple_files = true;

import "google/protobuf/empty.proto";

service UserContextService {
  rpc create(CreateProto) returns (UserContextProto);
  rpc update(UpdateProto) returns (UserContextProto);
  rpc delete(DeleteProto) returns (google.protobuf.Empty);
  rpc findById(FindByIdProto) returns (UserContextProto);
  rpc findAll(FindAllProto) returns (stream UserContextProto);
  rpc findByUserId(FindByUserIdProto) returns (stream UserContextProto);
  rpc findByContextId(FindByContextIdProto) returns (stream UserContextProto);
}

message UserContextProto {
  string id = 1;
  string userId = 2;
  string contextId = 3;
}

message CreateProto {
  string userId = 1;
  string contextId = 2;
}

message UpdateProto {
  string id = 1;
  string userId = 2;
  string contextId = 3;
}

message DeleteProto {
  string id = 1;
}

message FindByIdProto {
  string id = 1;
}

message FindAllProto {}

message FindByUserIdProto {
  string userId = 1;
}

message FindByContextIdProto {
  string contextId = 1;
}
